--- a/task03_0606/Views/Shared/_CartList.cshtml
+++ b/task03_0606/Views/Shared/_CartList.cshtml
@@ -46,10 +46,10 @@
             }
             <div class="dropdown-divider"></div>
             <div class="dropdown-item small">
-                <span>
-                    @*<a href="~/#/ShoppingList?userID=1">詳細購物明細</a>*@
-                    <a href="~/Order/Index" class="btn btn-sm btn-success pull-right"><i class="fa fa-fw fa-dollar"></i>結帳</a>
-                </span>
+                <div class="dropdown-message">
+                    <a href="~/Order/Index" class="btn btn-sm btn-success pull-right "><i class="fa fa-fw fa-dollar"></i>結帳</a>
+                </div>
+                  
             </div>
         </div>
 
