--- a/task03_0606/Views/Order/Order_list_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_list_bussiness.cshtml
@@ -32,7 +32,7 @@
                 </p>
 
             </div>
-            <ul class="list-group list-group-flush">
+            <ul class="list-group list-group-flush" id="storeUl">
                 @{
 
                     using (task03_0606.Models.FoodCourtDBEntities db = new task03_0606.Models.FoodCourtDBEntities())
