--- a/task03_0606/Views/Shared/_Layout.cshtml
+++ b/task03_0606/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <link href="~/startbootstrap-sb-admin-gh-pages/css/sb-admin.css" rel="stylesheet">
 
     <!-- Bootstrap core JavaScript-->
-    <script src="~/startbootstrap-sb-admin-gh-pages/vendor/jquery/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="~/startbootstrap-sb-admin-gh-pages/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- Core plugin JavaScript-->
     <script src="~/startbootstrap-sb-admin-gh-pages/vendor/jquery-easing/jquery.easing.min.js"></script>
@@ -153,68 +153,7 @@
                     <li id="Cart" class="nav-item dropdown">
                         @Html.Partial("_CartList")
                     </li>
-                    @*<li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                <i class="fa fa-fw fa-shopping-cart"></i>
-                                <span class="indicator text-warning d-none d-lg-block">
-                                    <i class="fa fa-fw fa-circle">20</i>
-                                </span>
-                            </a>
-                            <div class="dropdown-menu" aria-labelledby="alertsDropdown">
-                                <h6 class="dropdown-header">購物車</h6>
-
-                                <div class="dropdown-divider"></div>
-                                <div class="dropdown-item">
-                                    <span class="text-danger">
-                                        <a href="~/#/Products?productID=1">
-                                            <strong> 產品1 </strong>
-                                        </a>
-                                        <a href="~/#/Delete?productID=1" class="btn btn-sm btn-danger pull-right" aria-label="Delete">
-                                            <i class="fa fa-trash-o" aria-hidden="true"></i>
-                                        </a>
-                                    </span>
-                                    <div class="dropdown-message small">
-                                        This is an automated server response message. All systems are online.
-                                    </div>
-                                </div>
-
-
-                                <div class="dropdown-divider"></div>
-                                <div class="dropdown-item">
-                                    <span class="text-danger">
-                                        <a href="~/#/Products?productID=2">
-                                            <strong> 產品2 </strong>
-                                        </a>
-                                        <a href="~/#/Delete?productID=2" class="btn btn-sm btn-danger pull-right" aria-label="Delete">
-                                            <i class="fa fa-trash-o" aria-hidden="true"></i>
-                                        </a>
-                                    </span>
-                                    <div class="dropdown-message small">
-                                        This is an automated server response message. All systems are online.
-                                    </div>
-                                </div>
-
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">
-                                    <span class="text-success">
-                                        <strong>
-                                            <i class="fa fa-long-arrow-up fa-fw"></i>Status Update
-                                        </strong>
-                                    </span>
-                                    <span class="small float-right text-muted">11:21 AM</span>
-                                    <div class="dropdown-message small">This is an automated server response message. All systems are online.</div>
-                                </a>
-
-
-                                <div class="dropdown-divider"></div>
-                                <div class="dropdown-item small">
-                                    <span>
-                                        <a href="~/#/ShoppingList?userID=1">詳細購物明細</a>
-                                        <a href="~/#/Payment" class="btn btn-sm btn-success pull-right"><i class="fa fa-fw fa-dollar"></i>結帳</a>
-                                    </span>
-                                </div>
-                            </div>
-                        </li>*@
+                    
 
                 }
                 @*搜尋列*@
