客戶訂單明細 ok

--- a/task03_0606/Views/Order/Order_list_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_list_bussiness.cshtml
@@ -77,7 +77,10 @@
 </div>
 
 <div class="row">
-    <div id="page">
+    <div class="col-sm-12 col-md-5">
+        <div class="dataTables_info" id="dataTable_info" role="status" aria-live="polite">第 21 筆 到 第 29 筆, 共 29 筆</div>
+    </div>
+    <div id="page" class="col-sm-12 col-md-7">
         <ul class="pagination pagination-sm">
             <li class="page-item prev"><a class="page-link" href="#">上一頁</a></li>
             <li class="page-item"><a class="page-link" href="#">1</a></li>
