--- a/task03_0606/Views/Order/Order_list_costomer.cshtml
+++ b/task03_0606/Views/Order/Order_list_costomer.cshtml
@@ -4,19 +4,19 @@
 }
 
 <ol class="breadcrumb">
-    <li class="breadcrumb-item active">訂單列表</li>
+    <li class="breadcrumb-item active">訂單列表--我的餐點訂單</li>
 </ol>
-<div class="col-xl-12 col-sm-12 mb-12">
+@*<div class="col-xl-12 col-sm-12 mb-12">
     <div class="card-header">
-        <i class="fa fa-table"></i>  我的餐點訂單<div class="pull-right text-muted">Updated yesterday at 11:59 PM</div>
+        <i class="fa fa-table"></i> 我的餐點訂單<div class="pull-right text-muted">Updated yesterday at 11:59 PM</div>
     </div>
     <div class="card-body">
         <div class="table-responsive">
             <table class="table table-bordered table-hover" id="dataTable" width="100%" cellspacing="0">
                 <thead>
                     <tr>
-                        <th>下單時間</th>
                         <th>訂單單號</th>
+                        <th>下單時間</th>
                         <th>座位</th>
                         <th>訂單狀況</th>
 
@@ -29,8 +29,8 @@
 
                     {
                         <tr class="orderListItem">
-                            <td>@order.orderDate</td>
                             <td>@order.orderId</td>
+                            <td>@string.Format("{0:T}", Convert.ToDateTime(order.orderDate))</td>
                             <td>@order.tableId</td>
                             <td>@(order.orderState == 1 ? "待出餐" : "出餐完畢")</td>
                         </tr>
@@ -41,7 +41,38 @@
         </div>
     </div>
 
+</div>*@
+
+<div class="row">
+    <div class="table-responsive col-12">
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th>單號</th>
+                    <th>下單時間</th>
+                    <th>訂單狀況</th>
+
+                </tr>
+            </thead>
+            <tbody>
+
+                @foreach (var order in Model)
+
+                {
+                    <tr class="orderListItem" >
+                        <td><a href="~/Order/Order_detail_costomer?itemOrderId=@order.orderId">@order.orderId </a></td>
+                        <td>@string.Format("{0:yyyy/MM/dd/ HH:mm}", Convert.ToDateTime(order.orderDate))</td>
+                        <td>@(order.orderState == 1 ? "待出餐" : "出餐完畢")</td>
+                    </tr>
+                }
+
+            </tbody>
+        </table>
+    </div>
 </div>
+
+
+
 
 <div class="modal fade bd-example-modal-lg " id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg modal-dialog-centered">
@@ -125,24 +156,25 @@
 
 <script>
 
-    //找 id=dataTable table 下的 tr class=orderListItem ==> tr[]
-    $("#dataTable").find("tr.orderListItem").click(function () {
-        //alert(this.innerText);
-        //alert(this.cells[0].innerText);
-        //$("#debug").text(this.cells[0].innerText);
-        $("#orderDetail_time").text(this.cells[0].innerText);
-        $("#orderDetail_orderID").text(this.cells[1].innerText);
-        $("#orderDetail_seatID").text(this.cells[2].innerText);
+    ////找 id=dataTable table 下的 tr class=orderListItem ==> tr[]
+    //$("#dataTable").find("tr.orderListItem").click(function () {
+    //    //alert(this.innerText);
+    //    //alert(this.cells[0].innerText);
+    //    //$("#debug").text(this.cells[0].innerText);
+    //    $("#orderDetail_time").text(this.cells[0].innerText);
+    //    $("#orderDetail_orderID").text(this.cells[1].innerText);
+    //    $("#orderDetail_seatID").text(this.cells[2].innerText);
 
+    //    $('#exampleModalCenter').modal('show');
+
+     function showModal (itemOrderId){
         $('#exampleModalCenter').modal('show');
-
-
         $.ajax({
             method: "POST",
             dataType: 'json',
 
             url:"@Url.Action("Order_list_costomer", "Order")",
-            data: { OrderId: parseInt($("#orderDetail_orderID").text()) }
+            data: { OrderId: itemOrderId }
         })
             .done(function (dataList) {
                 console.log(dataList)
@@ -158,7 +190,7 @@
                 $("#detailSum").empty();
                 $("#detailSum").append('<tr><td>總計</td><td></td><td></td><td></td><td>' + countSum + '</td><td></td><td>' + amountSum + '</td><td></td><td></td><</tr>');
             });
-    });
+    }
 
     </script>
 
