--- a/task03_0606/Views/Order/Order_deteail_bussiness.cshtml
+++ b/task03_0606/Views/Order/Order_deteail_bussiness.cshtml
@@ -172,10 +172,10 @@
          alert("1 OK")
          var chat = $.connection.storeHub;
          alert("2 OK")
-         chat.client.addNewMessageToPage = function (test, orderId, orderTime, customerPhone, seatID, productID, productName, productCount, unitPrice, customerNote, productionStatus) {
+         chat.client.addNewMessageToPage = function (newOrderData) {
              //alert(test);
-             //$("#storeTable tbody").append('<tr>' + '<td data-th="接單時間：">' + orderTime + '</td>'
-             //    + '</td><td data-th="客戶電話：">' + customerPhone + '</td>');
+             //alert(newOrderData);
+             //$("#storeTable tbody").append('<tr>' + newOrderData.orderTime + '</tr>');
              window.location.reload();
          };
 
