--- a/task03_0606/Views/Products/Drinkproducts.cshtml
+++ b/task03_0606/Views/Products/Drinkproducts.cshtml
@@ -55,8 +55,8 @@
             </div>
             <div class='product_inner'>
                 <p>@db.productName</p>
-                <p>Price $@db.productPrice</p>
-                <button type="button" id="button1" onclick="AddToCart(@db.productID)">Add to basket</button>
+                <p class="">售價 <i class="fa fa-dollar"></i> @db.productPrice</p>
+                <button type="button" id="button1" onclick="AddToCart(@db.productID)">放入購物車</button>
             </div>
 
             <div class='product_overlay'>
@@ -64,9 +64,10 @@
                 <i class='fa fa-check'></i>
             </div>
         </div>
+            <br />
     </div>
             if (counter % 6 == 0) {
-                @:</div><div class="row">
+                @:</div><br /><div class="row">
                 counter = 0;
                 }
                 counter++;
@@ -74,5 +75,14 @@
             </div>
         
     <script>
-
+        $(document).ready(function () {
+            $("button").click(function () {
+                swal({
+                    type: 'success',
+                    title: '成功放入購物車',
+                    showConfirmButton: false,
+                    timer: 1000
+                })
+            });
+        });
     </script>
