--- a/task03_0606/Views/Products/Riceproducts.cshtml
+++ b/task03_0606/Views/Products/Riceproducts.cshtml
@@ -14,57 +14,68 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
 
-@*<header>
-        <ul>
-            <i class='fa fa-shopping-cart'>
-                <span class='counter'></span>
-            </i>
-        </ul>
-    </header>*@
 
-                    <div class='row'>
-                        @foreach(task03_0606.Models.FoodProduct db1 in Model)
-                        {
+<div class='row'>
+    @{ var counter = 1; }
+    @foreach (task03_0606.Models.FoodProduct db in Model) {
+        <div class="col-sm">
+            <div class="product--pink col-sm-12">
+                <!-- Button trigger modal -->
+                <img src='~/photo/@db.productPicture' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter.@db.productID" />
 
-                            <div class='product--pink col-sm-2'>
-                                <div class="row"></div>
-                                <!-- Button trigger modal -->
-                                <img src='~/photo/@db1.productPicture' width='300' type="button" class="btn" data-toggle="modal" data-target="#exampleModalCenter.@db1.productID" />
-
-                                <!-- Modal -->
-                                <div class="modal fade" id="exampleModalCenter.@db1.productID" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle.@db1.productID" aria-hidden="true">
-                                    <div class="modal-dialog modal-dialog-centered" role="document">
-                                        <div class="modal-content">
-                                            <div class="modal-header">
-                                                <h5 class="modal-title" id="exampleModalLongTitle.@db1.productID">@db1.productName</h5>
-                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                    <span aria-hidden="true">&times;</span>
-                                                </button>
-                                            </div>
-
-                                            <div class="modal-body">
-                                                <img src='~/photo/@db1.productPicture' width='500' /><br />
-                                                @db1.productDescription
-                                            </div>
-                                            <div class="modal-footer">
-
-                                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                                <button type="button" class="btn btn-primary">Add to basket</button>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class='product_inner'>
-                                    <p>@db1.productName</p>
-                                    <p>Price $@db1.productPrice</p>
-                                    <button>Add to basket</button>
-                                </div>
-
-                                <div class='product_overlay'>
-                                    <h2>Added to basket</h2>
-                                    <i class='fa fa-check'></i>
-                                </div>
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModalCenter.@db.productID" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle.@db.productID" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLongTitle.@db.productID">@db.productName</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
                             </div>
-                        }
 
+                            <div class="modal-body">
+                                <img src='~/photo/@db.productPicture' width='500' /><br />
+                                @db.productDescription
+                            </div>
+                            <div class="modal-footer">
+
+                                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                <button id="button1" type="button" class="btn btn-primary" onclick="AddToCart(@db.productID)">Add to basket</button>
+                            </div>
+                        </div>
                     </div>
+                </div>
+                <div class='product_inner'>
+                    <p>@db.productName</p>
+                    <p class="">售價 <i class="fa fa-dollar"></i> @db.productPrice</p>
+                    <button type="button" id="button1" onclick="AddToCart(@db.productID)">放入購物車</button>
+                </div>
+
+                <div class='product_overlay'>
+                    <h2>Added to basket</h2>
+                    <i class='fa fa-check'></i>
+                </div>
+            </div>
+            <br />
+        </div>
+        if (counter % 6 == 0) {
+            @:</div><br /><div class="row">
+            counter = 0;
+        }
+        counter++;
+    }
+</div>
+
+<script>
+    $(document).ready(function () {
+        $("button").click(function () {
+            swal({
+                type: 'success',
+                title: '成功放入購物車',
+                showConfirmButton: false,
+                timer: 1000
+            })
+        });
+    });
+</script>
